# BanG

./: .gitignore  CFG_BRANCH_COVERAGE_GUIDE.md  CFG_INJECTION_FLOW.md  README.md  pyproject.toml  run_evaluation.sh
defects4j-subjects-notests/Cli-40f/: .defects4j.config  .travis.yml  pom.xml
defects4j-subjects-notests/Codec-18f/: defects4j.build.properties  pom.xml
defects4j-subjects-notests/Collections-28f/: .defects4j.config  defects4j.build.properties  pom.xml
defects4j-subjects-notests/Compress-47f/: defects4j.build.properties  pom.xml
defects4j-subjects-notests/Csv-16f/: defects4j.build.properties  pom.xml
defects4j-subjects-notests/Gson-16f/: .defects4j.config  defects4j.build.properties  pom.xml
defects4j-subjects-notests/JacksonCore-26f/: defects4j.build.properties  pom.xml
defects4j-subjects-notests/JacksonDatabind-112f/: defects4j.build.properties  pom.xml
defects4j-subjects-notests/JacksonXml-5f/: .defects4j.config  defects4j.build.properties  pom.xml
defects4j-subjects-notests/Jsoup-93f/: defects4j.build.properties  pom.xml
evaluation/: class_list.csv  compute_statistics.py  context_limit.py  count_classes_with_high_complexity.py  coverage_statistics_models.csv  coverage_statistics_old.csv  d4j-fixed-version.csv  execute_classes_pick_one.py  execute_classes_with_high_complexity.py  execute_ours.py  execute_symprompt.py  extract_pass_rate.py  pass_rate_statistics.csv  result-html-parser.py  result-parser-different-models.py  utils.py
panta/: README.md  lance-env.yml  pyproject.toml
panta/panta/: main.py  (+6 more)
src/: README.md  panta-env.yml
(+1034 files in other folders)
